fixed app icon padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ a:focus {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px 80px 0px 80px;
+    padding: 20px 80px 0px 80px;
 }
 
 @media(min-width: 992px) {
